fixing txt overflow in note

--- a/css/apps/keep/keep-app.css
+++ b/css/apps/keep/keep-app.css
@@ -14,11 +14,3 @@
     display: flex;
     flex-direction: column;
 }
-
-.keep-app .side-nav {
-    background-color: var(--clr1);
-    align-self: flex-start;
-    height: 100%;
-    width: 60px;
-    /* flex-grow: 1; */
-}
